--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Toju Mikie's Website</title>
+
+    <!-- Bootstrap CSS file-->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+
+    <!-- custom CSS file -->
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <!-- Jquery JS file -->
+    <script src="./js/jquery.3.6.0.js"></script>
+    <!--Bootstrap JS file -->
+    <script src="./js/bootstrap.min.js"></script>
+</body>
 </html>
