--- a/index.html
+++ b/index.html
@@ -8,11 +8,47 @@
 
     <!-- Bootstrap CSS file-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-
+    <!-- fontawesome icons -->
+    <link rel="stylesheet" href="./css/all.min.css"
     <!-- custom CSS file -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <!-- ############################## Start Header Area ############################## -->
+    <header class="header_area">
+        <div class="main-menu">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </div>
+    </header>
+    <!-- ##############################  End Header Area  ############################## -->
+
+
+
+
     <!-- Jquery JS file -->
     <script src="./js/jquery.3.6.0.js"></script>
     <!--Bootstrap JS file -->
