updated navigation bar
prepared navigation bar for

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS file-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- fontawesome icons -->
-    <link rel="stylesheet" href="./css/all.min.css"
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- custom CSS file -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -20,7 +20,7 @@
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar</a>
+                  <a class="navbar-brand" href="#">Home</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -30,13 +30,22 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">About Me</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Experience</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link disabled">Education</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link disabled">Certifications</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link disabled">Skills</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link disabled">Projects</a>
                       </li>
                     </ul>
                   </div>
