--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="me-auto"></div>
                     <ul class="navbar-nav">
                       <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -55,7 +56,32 @@
     </header>
     <!-- ##############################  End Header Area  ############################## -->
 
-
+    <!-- ############################## Start Main Area ############################## -->
+    <main class="site-main">
+        <!-- ############################## Start Banner Area ############################ -->
+        <section class="site-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 site-title">
+                        <h3 class="title-text text-uppercase">Hello!</h3>
+                        <h1 class="title-text">Welcome to my Website!</h1>
+                        <h4 class="title-text">Hosted on Github Pages</h4>
+                        <div class="site-buttons">
+                            <div class="d-flex flex-row flex-wrap">
+                                <button type="button" class="btn button primary-button mr-4">Click here to download my résumé</button>
+                                <button type="button" class="btn button secondary-button">dummy button</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 banner-image">
+                        <img src="./img/myself.JPG" alt="self-portrait" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ############################## End Main Area ############################## -->
+    </main>
+    <!-- ############################## End Main Area ############################## -->
 
 
     <!-- Jquery JS file -->
