--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li> -->
                       <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
+                        <a class="nav-link" href="about-me.html">About Me</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Experience</a>
@@ -79,7 +79,35 @@
                 </div>
             </div>
         </section>
-        <!-- ############################## End Main Area ############################## -->
+        <!-- ############################## End Banner Area ############################## -->
+        <!-- ######################### Start About Area ################################## -->
+        <section class="about-area">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center">
+                <div class="about-image w-75">
+                  <img src="./img/workstation.JPG" alt="About us" class="img-fluid">
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12 about-title">
+                <h2 class="pt-5">
+                  <span>Let me introduce myself</span>
+                  <!-- <span>introduce</span>
+                  <span>myself</span> -->
+                </h2>
+                <div class="paragraph py-4 w-75">
+                  <p class="para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloribus sit sed, iusto sunt eligendi odit accusamus accusantium tempora modi.
+                  </p>
+                  <p class="para">Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                  </p>
+                </div>
+                <button type="button" class="btn button primary-button">Download my résumé</button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- ########################  End About Area #################################### -->
     </main>
     <!-- ############################## End Main Area ############################## -->
 
