added more to the main page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- fontawesome icons -->
     <link rel="stylesheet" href="./css/all.min.css">
+    <!-- OwlCarousel css file -->
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.default.min.css">
     <!-- custom CSS file -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Responsive CSS file -->
+    <link rel="stylesheet" href="./css/responsive.css">
+
 </head>
 <body>
 
@@ -297,7 +303,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p2.jpg" alt="portfolio-2">
+                  <a class="test-popup-link" href="./img/portfolio/p2.jpg">
+                    <img src="./img/portfolio/p2.jpg" alt="portfolio-2">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Paint Wall</h4>
@@ -308,7 +316,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p3.jpg" alt="portfolio-3">
+                  <a class="test-popup-link" href="./img/portfolio/p3.jpg">
+                    <img src="./img/portfolio/p3.jpg" alt="portfolio-3">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Female Light</h4>
@@ -319,7 +329,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p4.jpg" alt="portfolio-4">
+                  <a class="test-popup-link" href="./img/portfolio/p4.jpg">
+                    <img src="./img/portfolio/p4.jpg" alt="portfolio-4">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Fourth Air</h4>
@@ -330,7 +342,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p5.jpg" alt="portfolio-5">
+                  <a class="test-popup-link" href="./img/portfolio/p5.jpg">
+                    <img src="./img/portfolio/p5.jpg" alt="portfolio-5">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Multiple font</h4>
@@ -341,7 +355,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p6.jpg" alt="portfolio-6">
+                  <a class="test-popup-link" href="./img/portfolio/p6.jpg">
+                    <img src="./img/portfolio/p6.jpg" alt="portfolio-6">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Together sign</h4>
@@ -352,7 +368,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p7.jpg" alt="portfolio-7">
+                  <a class="test-popup-link" href="./img/portfolio/p7.jpg">
+                    <img src="./img/portfolio/p7.jpg" alt="portfolio-7">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Green Heaven</h4>
@@ -363,7 +381,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p8.jpg" alt="portfolio-8">
+                  <a class="test-popup-link" href="./img/portfolio/p8.jpg">
+                    <img src="./img/portfolio/p8.jpg" alt="portfolio-8">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">fly male</h4>
@@ -374,7 +394,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
               <div class="our-project">
                 <div class="img">
-                  <img src="./img/portfolio/p9.jpg" alt="portfolio-9">
+                  <a class="test-popup-link" href="./img/portfolio/p9.jpg">
+                    <img src="./img/portfolio/p9.jpg" alt="portfolio-9">
+                  </a>
                 </div>
                 <div class="title py-4">
                   <h4 class="text-uppercase">Camera Lens</h4>
@@ -386,9 +408,128 @@
         </div>
       </section>
       <!-- ####################### End Project Section ################################# -->
+      <!-- ############## Start What Clients Say About Me Section ###################### -->
+      <section class="about-area">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-12">
+              <div class="about-title">
+                <h1 class="text-uppercase title-h1">What clients say about me</h1>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. In explicabo, cum velit ad facilis impedit repudiandae eius odio inventore quos.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container carousel py-lg-5">
+          <div class="owl-carousel owl-theme">
+            <div class="client row">
+              <div class="col-lg-4 col-md-12 client-img">
+                <img src="./img/testimonials/t1.jpg" alt="img1" class="img-fluid">
+              </div>
+              <div class="col-lg-8 col-md-12 about-client">
+                <h4 class="text-uppercase">John Martin</h4>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+              </div>
+            </div>
+            <div class="client row">
+              <div class="col-lg-4 col-md-12 client-img">
+                <img src="./img/testimonials/t2.jpg" alt="img2" class="img-fluid">
+              </div>
+              <div class="col-lg-8 col-md-12 about-client">
+                <h4 class="text-uppercase">Mac Hill</h4>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+              </div>
+            </div>
+            <div class="client row">
+              <div class="col-lg-4 col-md-12 client-img">
+                <img src="./img/testimonials/t1.jpg" alt="img1" class="img-fluid">
+              </div>
+              <div class="col-lg-8 col-md-12 about-client">
+                <h4 class="text-uppercase">John Martin</h4>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+              </div>
+            </div>
+            <div class="client row">
+              <div class="col-lg-4 col-md-12 client-img">
+                <img src="./img/testimonials/t2.jpg" alt="img2" class="img-fluid">
+              </div>
+              <div class="col-lg-8 col-md-12 about-client">
+                <h4 class="text-uppercase">Mac Hill</h4>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+              </div>
+            </div>
+            <div class="client row">
+              <div class="col-lg-4 col-md-12 client-img">
+                <img src="./img/testimonials/t1.jpg" alt="img1" class="img-fluid">
+              </div>
+              <div class="col-lg-8 col-md-12 about-client">
+                <h4 class="text-uppercase">John Martin</h4>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+              </div>
+            </div>
+            <div class="client row">
+              <div class="col-lg-4 col-md-12 client-img">
+                <img src="./img/testimonials/t2.jpg" alt="img2" class="img-fluid">
+              </div>
+              <div class="col-lg-8 col-md-12 about-client">
+                <h4 class="text-uppercase">Mac Hill</h4>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ############### End What Clients Say About Me Section ####################### -->
+      <!-- ############## Start Email Subscription Section ############################  -->
+      <section class="subscribe-us-area">
+        <div class="container subscribe">
+          <div class="row">
+            <div class="col-lg-12 text-center subscribe-title">
+              <h4 class="text-uppercase">Get updates from your email</h4>
+              <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, deserunt?</p>
+            </div>
+          </div>
+          <div class="d-sm-flex justify-content-center">
+            <form class="w-50">
+              <div class="row d-flex flex-row flex-wrap">
+                <div class="col input-textbox">
+                  <input type="text" id="txtemail" class="form-control" placeholder="Email">
+                </div>
+                <div class="col">
+                  <div class="btn-submit">
+                    <button type="submit" class="btn btn-success float-right">Subscribe</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+      <!-- ################ End Email Subscription Section ############################# -->
     </main>
     <!-- ############################## End Main Area ############################## -->
-
+    <footer class="footer-area">
+      <div class="container">
+        <div class="">
+          <div class="site-logo text-center py-4">
+            <a href="#"><img src="./img/logo.png" alt="logo"></a>
+          </div>
+          <div class="social text-center">
+            <h5 class="text-uppercase">Follow me</h5>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+          <div class="copyrights text-center">
+            <p class="para">
+              Website 2022, created by Toju Mikie.
+              <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Jquery JS file -->
     <script src="./js/jquery.3.6.0.js"></script>
@@ -398,7 +539,9 @@
     <script src="./vendor/isotope/isotope.min.js"></script>
     <!-- Magnific-Popup script file -->
     <script src="./vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
-    <!-- custom JS file0 -->
+    <!-- OwlCarousel JS file -->
+    <script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script>
+    <!-- custom JS file -->
     <script src="./js/main.js"></script>
 </body>
 </html>
