working on about me section

--- a/about-me.html
+++ b/about-me.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toju Mikie's Website</title>
+    <title>About Toju Mikie</title>
 
+    <!-- Magnific Popup css file -->
+    <link rel="stylesheet" href="./vendor/Magnific-Popup/dist/magnific-popup.css">
     <!-- Bootstrap CSS file-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- fontawesome icons -->
     <link rel="stylesheet" href="./css/all.min.css">
+    <!-- OwlCarousel css file -->
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.default.min.css">
     <!-- custom CSS file -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Responsive CSS file -->
+    <link rel="stylesheet" href="./css/responsive.css">
+
 </head>
 <body>
 
@@ -54,10 +62,76 @@
               </nav>
         </div>
     </header>
+    <main class="site-main">
+      <section class="about-area">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center">
+              <div class="about-image w-75">
+                <img src="./img/workstation.JPG" alt="About us" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12 about-title">
+              <h2 class="pt-5">
+                <span>Let me introduce myself</span>
+                <!-- <span>introduce</span>
+                      <span>myself</span> -->
+              </h2>
+              <div class="paragraph py-4 w-75">
+                <p class="para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloribus sit sed, iusto sunt eligendi odit
+                  accusamus accusantium tempora modi.
+                </p>
+                <p class="para">Why do we use it? It is a long established fact that a reader will be distracted by the
+                  readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                  more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it
+                  look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
+                  their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their
+                  infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
+                  (injected humour and the like).
+                </p>
+              </div>
+              <button type="button" class="btn button primary-button">Download my résumé</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    
+    <footer class="footer-area">
+      <div class="container">
+        <div class="">
+          <div class="site-logo text-center py-4">
+            <a href="#"><img src="./img/logo.png" alt="logo"></a>
+          </div>
+          <div class="social text-center">
+            <h5 class="text-uppercase">Follow me</h5>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+          <div class="copyrights text-center">
+            <p class="para">
+              Website 2022, created by Toju Mikie.
+              <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Jquery JS file -->
     <script src="./js/jquery.3.6.0.js"></script>
     <!--Bootstrap JS file -->
     <script src="./js/bootstrap.min.js"></script>
+    <!-- Isotope JS library -->
+    <script src="./vendor/isotope/isotope.min.js"></script>
+    <!-- Magnific-Popup script file -->
+    <script src="./vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
+    <!-- OwlCarousel JS file -->
+    <script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script>
+    <!-- custom JS file -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
